--- a/app/application/index.html
+++ b/app/application/index.html
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Authme</title>
+		<meta charset="UTF-8" />
+		<title>Authme</title>
 		<!-- js -->
-		<script defer src="./index.js"></script>
-		<script defer src="./convert.js"></script>
-		<script defer src="./save.js"></script>
+		<script defer src="./src/js/convert.js"></script>
+		<script defer src="./src/js/index.js"></script>
+		<script defer src="./src/js/save.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="./dragonfly@1.1.0.css" />
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -382,7 +384,7 @@
 						<button class="button1" id="copy19">Copy code</button>
 					</div>
 				</div>
-				<h4 id="version">Authme 1.0.0</h4>
+				<h4 id="version">Authme 1.1.0</h4>
 			</div>
 			<!-- grid -->
 		</div>
