--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- js -->
-		<script defer src="./index.js"></script>
+		<script defer src="./srcjs/index.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="./dragonfly@1.1.0.css" />
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -21,7 +21,7 @@
 			<input class="input1" type="password" name="password" id="password_input" />
 			<br />
 			<button class="button1" onclick="unhash_password()" id="button1">Confirm</button>
-			<h4 id="version">Authme 1.0.0</h4>
+			<h4 id="version">Authme 1.1.0</h4>
 		</div>
 	</body>
 </html>
