--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- js -->
-		<script defer src="./index.js"></script>
+		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="./dragonfly@1.1.0.css" />
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -25,7 +25,9 @@
 			<input class="input1" type="password" name="password2" id="password_input2" />
 			<br />
 			<button class="button1" onclick="match_passwords()" id="button1">Confirm</button>
-			<h4 id="version">Authme 1.0.0</h4>
+			<br />
+			<a onclick="no_password()" href="#" class="link1">Don't require password</a>
+			<h4 id="version">Authme 1.1.0</h4>
 		</div>
 	</body>
 </html>
