--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- js -->
-		<script defer src="./srcjs/index.js"></script>
+		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
@@ -21,7 +21,6 @@
 			<input class="input1" type="password" name="password" id="password_input" />
 			<br />
 			<button class="button1" onclick="unhash_password()" id="button1">Confirm</button>
-			<h4 id="version">Authme 1.1.0</h4>
 		</div>
 	</body>
 </html>
