--- a/app/application/index.html
+++ b/app/application/index.html
@@ -23,6 +23,16 @@
 			<button type="button" class="button1" class="input" id="input" onclick="document.getElementById('file').click()">Choose a file</button>
 			<br />
 			<button class="button1" id="save" onclick="save()">Save config</button>
+			<br />
+			<input
+				name="search"
+				spellcheck="false"
+				id="search"
+				class="input2"
+				onkeyup="search()"
+				onkeydown="search()"
+				placeholder="Search for names..."
+			/>
 			<!-- grid -->
 		</div>
 	</body>
