--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -18,13 +18,17 @@
 			<p class="text3">You can configure the app setting here.</p>
 			<button class="button1" onclick="hide()">Close</button>
 			<h3>Launch on startup</h3>
-			<p class="text3">Start the app after operating system loaded. App will start on the tray . Windows only.</p>
+			<p class="text3">Start the app after the operating system loaded. The app will start on the tray. Windows only.</p>
 			<button class="button1" id="but0" onclick="startup()">-</button>
+			<br />
+			<h3>Close app to tray</h3>
+			<p class="text3">On closing the app will not quit. You can open the app from the tray menu. Windows only.</p>
+			<button class="button1" id="but2" onclick="tray()">-</button>
 			<br />
 			<h3>Clear data</h3>
 			<p class="text3">Clear password, 2FA codes and other settings</p>
 			<button class="button1" id="but1" onclick="data()">Clear data</button>
-			<h4 id="version">Authme 1.2.2</h4>
+			<h4 id="version">Authme 1.3.0</h4>
 		</div>
 	</body>
 </html>
