--- a/app/export/index.html
+++ b/app/export/index.html
@@ -18,7 +18,7 @@
 			<h2>Export</h2>
 			<p class="text3">You can export everything form your saved config.</p>
 			<button class="button1" onclick="hide()">Close</button>
-			<h3>Export</h3>
+			<h3>Start export</h3>
 			<p class="text3">If you saved your config you can export the secrects and the QR codes.</p>
 			<button class="button1" id="but0" onclick="exp()">Export</button>
 			<br />
