--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -25,10 +25,17 @@
 			<p class="text3">On closing the app will not quit. You can open the app from the tray menu. Windows only.</p>
 			<button class="button1" id="but2" onclick="tray()">-</button>
 			<br />
+			<h3>Open folders</h3>
+			<p class="text3">
+				You can open your Authme folder (this is where you unpackaged your app) and your settings folder (this is where the app stores the
+				settings).
+			</p>
+			<button class="button1" id="but3" onclick="folder0()">Authme folder</button>
+			<button class="button1" id="but4" onclick="folder1()">Settings folder</button>
 			<h3>Clear data</h3>
 			<p class="text3">Clear password, 2FA codes and other settings</p>
 			<button class="button1" id="but1" onclick="data()">Clear data</button>
-			<h4 id="version">Authme 1.3.0</h4>
+			<h4 id="version">Authme 1.4.0</h4>
 		</div>
 	</body>
 </html>
