--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -21,7 +21,7 @@
 			<br />
 			<img src="../../img/loading.gif" alt="" srcset="" />
 
-			<h4 id="version">Authme 1.4.0</h4>
+			<h4 id="ver"></h4>
 		</div>
 	</body>
 </html>
