--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -35,7 +35,7 @@
 			<h3>Clear data</h3>
 			<p class="text3">Clear password, 2FA codes and other settings</p>
 			<button class="button1" id="but1" onclick="data()">Clear data</button>
-			<h4 id="version">Authme 1.4.0</h4>
+			<h4 id="ver"></h4>
 		</div>
 	</body>
 </html>
