--- a/app/application/index.html
+++ b/app/application/index.html
@@ -6,29 +6,33 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- js -->
+		<script defer src="../.././src/scroll-out@2.2.12.js"></script>
 		<script defer src="./src/js/convert.js"></script>
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/save.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
+		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="center">
-			<h1>Authme</h1>
-			<h2 id="title">Here are your 2FA codes:</h2>
+			<h1 class="h1">Authme</h1>
+			<h2 class="h2" id="title">Here are your 2FA codes:</h2>
 			<input type="file" class="file" id="file" onchange="handlefiles(this.files)" accept=".txt" />
-			<button type="button" class="button1" class="input" id="input" onclick="document.getElementById('file').click()">Choose a file</button>
+			<button type="button" class="button1 button" class="input" id="input" onclick="document.getElementById('file').click()">
+				Choose a file
+			</button>
 			<br />
-			<button class="button1" id="save" onclick="save()">Save config</button>
+			<button class="button1 button" id="save" onclick="save()">Save config</button>
 			<br />
 			<input
 				name="search"
 				spellcheck="false"
 				id="search"
-				class="input2"
+				class="input2 input"
 				onkeyup="search()"
 				onkeydown="search()"
 				placeholder="Search for names..."
