--- a/app/export/index.html
+++ b/app/export/index.html
@@ -4,25 +4,37 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- js -->
-		<script defer src="./src/js/index.js"></script>
+		<script defer src="../.././src/scroll-out@2.2.12.js"></script>
 		<script defer src="./src/js/convert.js"></script>
+		<script defer src="./src/js/index.js"></script>
+		<script defer src="./src/js/export.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="center">
-			<h1>Authme</h1>
-			<h2>Export</h2>
-			<p class="text3">You can export everything form your saved config.</p>
-			<button class="button1" onclick="hide()">Close</button>
-			<h3>Start export</h3>
-			<p class="text3">If you saved your config you can export the secrects and the QR codes.</p>
-			<button class="button1" id="but0" onclick="exp()">Export</button>
-			<br />
-			<textarea readonly="readonly" id="result" cols="30" rows="10"></textarea>
+			<h1 class="h1">Authme</h1>
+			<h2 class="h2">Export</h2>
+			<p class="text3 p0">You can export everything form your saved config.</p>
+			<button class="button1 but0" onclick="hide()">Close</button>
+			<div class="before_export">
+				<h3>Start export</h3>
+				<p class="text3 p1">If you saved your config you can export the secrects and the QR codes.</p>
+				<button class="button1 but1" id="but0" onclick="exp()">Export</button>
+				<br />
+			</div>
+			<div class="after_export">
+				<h3>Save export</h3>
+				<p class="text3">Save your exported data as a text file to use it elsewhere.</p>
+				<button class="button1" id="but1" onclick="save_file()">Save file</button>
+				<button class="button1" id="but2" onclick="save_qr_codes()">Save QR codes</button>
+				<br />
+				<textarea readonly="readonly" id="result" cols="30" rows="10"></textarea>
+			</div>
 		</div>
 	</body>
 </html>
