--- a/app/import/index.html
+++ b/app/import/index.html
@@ -6,7 +6,7 @@
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.1.0.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
@@ -19,73 +19,144 @@
 			<button class="button1" onclick="hide()">Close</button>
 
 			<h2>Instructions</h2>
-			<p class="text3">
-				<b>Step 1</b>
-				<br />
-				<br />
-				Export the QR codes from the Google Authenticato app:
-				<br />
-				Tap on the three dots on the top right of the screen > Transfer Accounts > Export Accounts
-				<br />
-				<br />
-				<b>Step 2</b>
-				<br />
-				<br />
-				<u>Option 1: Import from QR code</u>
-				<br />
-				Save the two or one QR code with a screenshot or take a picture of them from another phone. Then transfer them to your computer.
-				<br />
-				<br />
-				<u>Option 2: Import from text</u>
-				<br />
-				Get 3rd party QR code reader from your application store. Scan the two or one QR code and then copy the text thats outputed, and then
-				send them to your computer.
-				<br />
-				<br />
-				<b>Step 3</b>
-				<br />
-				<br />
-				<u>Option 1: Import from QR code</u>
-				<br />
-				On your tray a folder will open, place your image(s) in the folder. If your image(s) not in .jpg then convert them to .jpg (just
-				google "image converter").
-				<br />
-				Rename your picture(s) to "pic0" and if you have one more then rename it to "pic1" (without quotation mark).
-				<br />
-				<br />
-				<u>Option 2: Import from text</u>
-				<br />
-				Scroll down, you will see two input fields.
-				<br />
-				Paste your text from the QR code, if you have one more QR code then use the second input field.
-				<br />
-				<br />
-				<b>Step 4</b>
-				<br />
-				<br />
-				Your file should be ready in your Authme folder. Go back to the main page:
-				<br />
-				Top menu > Advanced > Import
-				<br />
-				Click on the Choose file button, select your "exported.txt" file in your Authme folder.
-				<br />
-				<br />
-				<b>Step 5</b>
-				<br />
-				<br />
-				<i>AFTER YOU DONE DELETE "output.txt" AND "exported.txt" FROM YOUR AUTHME FOLDER.</i>
-			</p>
 
-			<h2 id="choose">Choose option</h2>
-			<button class="button1" id="but0" onclick="import_qrcode()">Import from QR code</button>
-			<button class="button1" id="but1" onclick="import_text0()">Import from text</button>
+			<details class="details1" open>
+				<summary class="summary1">1. Getting started</summary>
+				<p class="text3">
+					First, you need to have Python installed on your computer.
+					<br />
+					To check if you have Python: Top menu > Info > About.
+					<br />
+					If you see "Not installed" you have to download Python and restart the app.
+					<br />
+					<a href="#" onclick="link0()">Download Python</a>
+					<br />
+					If you want to create your file yourself you can find more informations on GitHub in the README.
+					<br />
+					<a href="#" onclick="link1()">GitHub</a>
+				</p>
+			</details>
+
+			<details class="details1" open>
+				<summary class="summary1">2. Choose your option</summary>
+				<p class="text3">
+					You have three options to import to Authme:
+					<br />
+					<br />
+					Option 1: Import from Google Authenticator with QR codes
+					<br />
+					Option 2: Import from Google Authenticator with QR codes with text
+					<br />
+					Option 3: Import from stand alone QR codes
+				</p>
+			</details>
+
+			<details class="details1">
+				<summary class="summary1">2.1 Import from Google Authenticator with QR codes</summary>
+				<p class="text3">
+					<b>Step 1</b>
+					<br />
+					Export the QR codes from the Google Authenticator app: Tap on the three dots on the top right of the screen > Transfer Accounts >
+					Export Accounts
+					<br />
+					<b>Step 2</b>
+					<br />
+					Save the two or more QR code with a screenshot or take a picture of them from another phone. Then transfer them to your computer.
+					<br />
+					<b>Step 3</b>
+					<br />
+					A popup windows will open, just select the picture(s).
+					<br />
+					<b>Step 4</b>
+					<br />
+					You will see a popup window again. Save the file.
+					<br />
+					<b>Step 5</b>
+					<br />
+					Go back to the main page: Top menu > Advanced > Import
+					<br />
+					<b>Step 6</b>
+					<br />
+					Click on the Choose file button, select your exported file from where you saved it. And you are done!
+				</p>
+			</details>
+
+			<details class="details1">
+				<summary class="summary1">2.2 Import from Google Authenticator with text</summary>
+				<p class="text3">
+					<b>Step 1</b>
+					<br />
+					Export the QR codes from the Google Authenticator app: Tap on the three dots on the top right of the screen > Transfer Accounts >
+					Export Accounts
+					<br />
+					<b>Step 2</b>
+					<br />
+					Get 3rd party QR code reader from your application store. Scan the one or two QR code and then copy the text thats outputed, and
+					then send them to your computer.
+					<br />
+					<b>Step 3</b>
+					<br />
+					Paste the texs(s) into the input fields.
+					<br />
+					<b>Step 4</b>
+					<br />
+					You will see a popup window. Save the file.
+					<br />
+					<b>Step 5</b>
+					<br />
+					Go back to the main page: Top menu > Advanced > Import
+					<br />
+					<b>Step 6</b>
+					<br />
+					Click on the Choose file button, select your exported file from where you saved it. And you are done!
+				</p>
+			</details>
+
+			<details class="details1">
+				<summary class="summary1">2.3 Import from stand alone QR codes</summary>
+				<p class="text3">
+					<b>Step 1</b>
+					<br />
+					Go to the websites you want to get the QR code from.
+					<br />
+					<b>Step 2</b>
+					<br />
+					Save the QR codes to your computer (take a screenshot).
+					<br />
+					<b>Step 3</b>
+					<br />
+					A popup windows will open, just select the picture(s).
+					<br />
+					<b>Step 4</b>
+					<br />
+					You will see a popup window again. Save the file.
+					<br />
+					<b>Step 5</b>
+					<br />
+					Go back to the main page: Top menu > Advanced > Import
+					<br />
+					<b>Step 6</b>
+					<br />
+					Click on the Choose file button, select your exported file from where you saved it. And you are done!
+				</p>
+			</details>
+
+			<div class="choose">
+				<h2 id="choose">Choose option</h2>
+				<p class="text3">Google Authenticator</p>
+				<button class="button1" id="but0" onclick="import_qrcode()">Import from QR code</button>
+				<button class="button1" id="but1" onclick="import_text()">Import from text</button>
+				<br />
+				<p class="text3">Stand alone</p>
+				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from QR code</button>
+			</div>
 
 			<div class="text-inputs">
 				<h2>Input codes</h2>
 				<input type="text" class="input1" id="input0" placeholder="First code" />
 				<input type="text" class="input1" id="input1" placeholder="Second code" />
 				<br />
-				<button class="button1" id="but2" onclick="import_text1()">Convert</button>
+				<button class="button1" id="but2" onclick="import_text_resume()">Convert</button>
 			</div>
 		</div>
 	</body>
