--- a/app/export/index.html
+++ b/app/export/index.html
@@ -22,6 +22,10 @@
 			<p class="text3 p0">You can export everything form your saved config.</p>
 			<button class="button1 but0" onclick="hide()">Close</button>
 			<div class="before_export">
+				<h3>Authme Web</h3>
+				<p class="text3 p1">You can use your exported config in Authme Web.</p>
+				<button class="button1 but1" id="but0" onclick="aw()">Open</button>
+				<br />
 				<h3>Start export</h3>
 				<p class="text3 p1">If you saved your config you can export the secrects and the QR codes.</p>
 				<button class="button1 but1" id="but0" onclick="exp()">Export</button>
