--- a/app/export/index.html
+++ b/app/export/index.html
@@ -11,6 +11,7 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
 		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
+		<link rel="stylesheet" href="../.././src/var.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
