--- a/app/import/index.html
+++ b/app/import/index.html
@@ -8,6 +8,7 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
+		<link rel="stylesheet" href="../.././src/var.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
