--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -18,18 +18,30 @@
 			<h2>Settings</h2>
 			<p class="text3">You can configure the app setting here.</p>
 			<button class="button1" onclick="hide()">Close</button>
+			<br />
+			<hr />
 			<h3>Launch on startup</h3>
 			<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Windows only).</p>
 			<button class="button1" id="but0" onclick="startup()">-</button>
 			<br />
+			<hr />
 			<h3>Close app to tray</h3>
 			<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Windows only).</p>
 			<button class="button1" id="but2" onclick="tray()">-</button>
 			<br />
+			<hr />
 			<h3>Show 2FA names</h3>
 			<p class="text3">The saved 2FA names will show up.</p>
 			<button class="button1" id="but5" onclick="names()">-</button>
 			<br />
+			<hr />
+			<h3>Shortcuts</h3>
+			<p class="text3">You can modify the not global shortcuts here.</p>
+			<input class="input1" disabled type="text" id="hk0" />
+			<button class="button1" id="hk0_button" onclick="hk0_modify()">Modify</button>
+			<br />
+			<input class="input1" disabled type="text" id="hk0" />
+			<button class="button1" id="hk0_button" onclick="hk0_modify()">Modify</button>
 			<h3>Open folders</h3>
 			<p class="text3">
 				You can open your Authme folder (this is where you unpackaged or installed your app) and your settings folder (this is where the app
@@ -37,13 +49,18 @@
 			</p>
 			<button class="button1" id="but3" onclick="folder0()">Authme folder</button>
 			<button class="button1" id="but4" onclick="folder1()">Settings folder</button>
+			<br />
+			<hr />
 			<h3>Clear data</h3>
-			<p class="text3">Clear password, 2FA codes and other settings</p>
+			<p class="text3">Clear password, 2FA codes and all other settings.</p>
 			<button class="button1" id="but1" onclick="reset()">Clear data</button>
+			<br />
+			<hr />
 			<h3>Status</h3>
 			<p class="text3">Current status of the API, click for all the status informations.</p>
 			<button class="button1" id="but6" onclick="link0()">-</button>
 			<br />
+			<hr />
 			<h3>Version</h3>
 			<p class="text3">Your current Authme version, click for release notes.</p>
 			<button class="button1" id="but7" onclick="link1()">-</button>
