--- a/app/export/index.html
+++ b/app/export/index.html
@@ -11,6 +11,7 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
 		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
+		<link rel="stylesheet" href="../.././src/var.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
@@ -22,16 +23,16 @@
 			<p class="text3 p0">You can export everything form your saved config.</p>
 			<button class="button1 but0" onclick="hide()">Close</button>
 			<div class="before_export">
-				<h3>Authme Web</h3>
-				<p class="text3 p1">You can use your exported config in Authme Web.</p>
-				<button class="button1 but1" id="but0" onclick="aw()">Open</button>
-				<br />
 				<h3>Start export</h3>
 				<p class="text3 p1">If you saved your config you can export the secrects and the QR codes.</p>
 				<button class="button1 but1" id="but0" onclick="exp()">Export</button>
 				<br />
 			</div>
 			<div class="after_export">
+				<h3>Authme Web</h3>
+				<p class="text3 p1">You can use your exported config in Authme Web.</p>
+				<button class="button1 but1" id="but0" onclick="aw()">Open</button>
+				<br />
 				<h3>Save export</h3>
 				<p class="text3">Save your exported data as a text file to use it elsewhere.</p>
 				<button class="button1" id="but1" onclick="save_file()">Save file</button>
