--- a/app/import/index.html
+++ b/app/import/index.html
@@ -8,6 +8,7 @@
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
+		<link rel="stylesheet" href="../.././src/var.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
@@ -23,140 +24,25 @@
 			<details class="details1" open>
 				<summary class="summary1">1. Getting started</summary>
 				<p class="text3">
-					First, you need to have Python installed on your computer.
+					If you don't know what to do please read the documentation and come back here (Recommended for most users):
 					<br />
-					To check if you have Python: Top menu > Info > About.
-					<br />
-					If you see "Not installed" you have to download Python and restart the app.
-					<br />
-					<a href="#" onclick="link0()">Download Python</a>
-					<br />
-					If you want to create your file yourself you can find more informations on GitHub in the README.
-					<br />
-					<a href="#" onclick="link1()">GitHub</a>
-				</p>
-			</details>
-
-			<details class="details1" open>
-				<summary class="summary1">2. Choose your option</summary>
-				<p class="text3">
-					You have three options to import to Authme:
+					<a href="#" onclick="link0()">Authme Import Documentation</a>
 					<br />
 					<br />
-					Option 1: Import from Google Authenticator with QR codes
+					If you want to create your file yourself you can find more informations on GitHub in the extract README (Recommended for techincal
+					users):
 					<br />
-					Option 2: Import from Google Authenticator with QR codes with text
-					<br />
-					Option 3: Import from stand alone QR codes
-				</p>
-			</details>
-
-			<details class="details1">
-				<summary class="summary1">2.1 Import from Google Authenticator with QR codes</summary>
-				<p class="text3">
-					<b>Step 1</b>
-					<br />
-					Export the QR codes from the Google Authenticator app: Tap on the three dots on the top right of the screen > Transfer Accounts >
-					Export Accounts
-					<br />
-					<b>Step 2</b>
-					<br />
-					Save the two or more QR code with a screenshot or take a picture of them from another phone. Then transfer them to your computer.
-					<br />
-					<b>Step 3</b>
-					<br />
-					A popup windows will open, just select the picture(s).
-					<br />
-					<b>Step 4</b>
-					<br />
-					You will see a popup window again. Save the file.
-					<br />
-					<b>Step 5</b>
-					<br />
-					Go back to the main page: Top menu > Advanced > Import
-					<br />
-					<b>Step 6</b>
-					<br />
-					Click on the Choose file button, select your exported file from where you saved it. And you are done!
-				</p>
-			</details>
-
-			<details class="details1">
-				<summary class="summary1">2.2 Import from Google Authenticator with text</summary>
-				<p class="text3">
-					<b>Step 1</b>
-					<br />
-					Export the QR codes from the Google Authenticator app: Tap on the three dots on the top right of the screen > Transfer Accounts >
-					Export Accounts
-					<br />
-					<b>Step 2</b>
-					<br />
-					Get 3rd party QR code reader from your application store. Scan the one or two QR code and then copy the text thats outputed, and
-					then send them to your computer.
-					<br />
-					<b>Step 3</b>
-					<br />
-					Paste the texs(s) into the input fields.
-					<br />
-					<b>Step 4</b>
-					<br />
-					You will see a popup window. Save the file.
-					<br />
-					<b>Step 5</b>
-					<br />
-					Go back to the main page: Top menu > Advanced > Import
-					<br />
-					<b>Step 6</b>
-					<br />
-					Click on the Choose file button, select your exported file from where you saved it. And you are done!
-				</p>
-			</details>
-
-			<details class="details1">
-				<summary class="summary1">2.3 Import from stand alone QR codes</summary>
-				<p class="text3">
-					<b>Step 1</b>
-					<br />
-					Go to the websites you want to get the QR code from.
-					<br />
-					<b>Step 2</b>
-					<br />
-					Save the QR codes to your computer (take a screenshot).
-					<br />
-					<b>Step 3</b>
-					<br />
-					A popup windows will open, just select the picture(s).
-					<br />
-					<b>Step 4</b>
-					<br />
-					You will see a popup window again. Save the file.
-					<br />
-					<b>Step 5</b>
-					<br />
-					Go back to the main page: Top menu > Advanced > Import
-					<br />
-					<b>Step 6</b>
-					<br />
-					Click on the Choose file button, select your exported file from where you saved it. And you are done!
+					<a href="#" onclick="link1()">Authme Extract README</a>
 				</p>
 			</details>
 
 			<div class="choose">
 				<h2 id="choose">Choose option</h2>
 				<p class="text3">Google Authenticator</p>
-				<button class="button1" id="but0" onclick="import_qrcode()">Import from QR code</button>
-				<button class="button1" id="but1" onclick="import_text()">Import from text</button>
+				<button class="button1" id="but0" onclick="import_qrcode()">Import from QR code(s)</button>
 				<br />
 				<p class="text3">Stand alone</p>
-				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from QR code</button>
-			</div>
-
-			<div class="text-inputs">
-				<h2>Input codes</h2>
-				<input type="text" class="input1" id="input0" placeholder="First code" />
-				<input type="text" class="input1" id="input1" placeholder="Second code" />
-				<br />
-				<button class="button1" id="but2" onclick="import_text_resume()">Convert</button>
+				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from QR code(s)</button>
 			</div>
 		</div>
 	</body>
