--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -7,45 +7,157 @@
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
+		<link rel="stylesheet" href="../.././src/var.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="center">
-			<h1>Authme</h1>
-			<h2>Settings</h2>
-			<p class="text3">You can configure the app setting here.</p>
-			<button class="button1" onclick="hide()">Close</button>
-			<h3>Launch on startup</h3>
-			<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Windows only).</p>
-			<button class="button1" id="but0" onclick="startup()">-</button>
-			<br />
-			<h3>Close app to tray</h3>
-			<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Windows only).</p>
-			<button class="button1" id="but2" onclick="tray()">-</button>
-			<br />
-			<h3>Show 2FA names</h3>
-			<p class="text3">The saved 2FA names will show up.</p>
-			<button class="button1" id="but5" onclick="names()">-</button>
-			<br />
-			<h3>Open folders</h3>
-			<p class="text3">
-				You can open your Authme folder (this is where you unpackaged or installed your app) and your settings folder (this is where the app
-				stores the settings).
-			</p>
-			<button class="button1" id="but3" onclick="folder0()">Authme folder</button>
-			<button class="button1" id="but4" onclick="folder1()">Settings folder</button>
-			<h3>Clear data</h3>
-			<p class="text3">Clear password, 2FA codes and other settings</p>
-			<button class="button1" id="but1" onclick="reset()">Clear data</button>
-			<h3>Status</h3>
-			<p class="text3">Current status of the API, click for all the status informations.</p>
-			<button class="button1" id="but6" onclick="link0()">-</button>
-			<br />
-			<h3>Version</h3>
-			<p class="text3">Your current Authme version, click for release notes.</p>
-			<button class="button1" id="but7" onclick="link1()">-</button>
+			<!-- navigation -->
+			<div class="tab">
+				<h1>Authme</h1>
+				<h2>Settings</h2>
+				<p class="text3">You can configure the app setting here.</p>
+				<button class="button1" onclick="hide()">Close</button>
+				<br />
+				<h3>Menu</h3>
+				<p class="text3">Choose a configuration menu.</p>
+				<button id="settings" class="button1" onclick="menu(event, 'setting')">Settings</button>
+				<button id="shortcuts " class="button1" onclick="menu(event, 'shortcuts')">Shortcuts</button>
+				<br />
+				<hr />
+			</div>
+
+			<!-- settings -->
+			<div id="setting" class="tabcontent">
+				<h3>Launch on startup</h3>
+				<p class="text3">Start the app after the operating system loaded. The app will start on the tray (Windows only).</p>
+				<button class="button1" id="but0" onclick="startup()">-</button>
+				<br />
+				<hr />
+				<h3>Close app to tray</h3>
+				<p class="text3">On closing the app will not quit. You can open the app from the tray menu (Windows only).</p>
+				<button class="button1" id="but2" onclick="tray()">-</button>
+				<br />
+				<hr />
+				<h3>Show 2FA names</h3>
+				<p class="text3">The saved 2FA names will show up.</p>
+				<button class="button1" id="but5" onclick="names()">-</button>
+				<br />
+				<hr />
+				<h3>Open folders</h3>
+				<p class="text3">
+					You can open your Authme folder (this is where you unpackaged or installed your app) and your settings folder (this is where the
+					app stores the settings).
+				</p>
+				<button class="button1" id="but3" onclick="folder0()">Authme folder</button>
+				<button class="button1" id="but4" onclick="folder1()">Settings folder</button>
+				<br />
+				<hr />
+				<h3>Clear data</h3>
+				<p class="text3">Clear password, 2FA codes and all other settings.</p>
+				<button class="button1" id="but1" onclick="reset()">Clear data</button>
+				<br />
+				<hr />
+				<h3>Status</h3>
+				<p class="text3">Current status of the API, click for all the status informations.</p>
+				<button class="button1" id="but6" onclick="link0()">-</button>
+				<br />
+				<hr />
+				<h3>Version</h3>
+				<p class="text3">Your current Authme version, click for release notes.</p>
+				<button class="button1" id="but7" onclick="link1()">-</button>
+			</div>
+
+			<!-- shortcuts -->
+			<div id="shortcuts" class="tabcontent">
+				<h3>Shortcuts</h3>
+				<p class="text3">
+					You can modify the not global shortcuts here. If you don't understand something just read the docs. After you done, restart the
+					app to make the new shortcuts work.
+				</p>
+				<button class="button1" id="but9" onclick="link2()">Docs</button>
+				<button class="button1" id="but9" onclick="restart()">Restart</button>
+				<br />
+				<br />
+				<br />
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">Settings</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk0_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk0_button" onclick="hk_modify(0)">Modify</button>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">Exit</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk1_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk1_button" onclick="hk_modify(1)">Modify</button>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">Import</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk2_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk2_button" onclick="hk_modify(2)">Modify</button>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">Export</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk3_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk3_button" onclick="hk_modify(3)">Modify</button>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">Update</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk4_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk4_button" onclick="hk_modify(4)">Modify</button>
+					</div>
+				</div>
+				<div class="grid">
+					<div class="div1">
+						<p class="text3 text">About</p>
+					</div>
+					<div class="div2">
+						<input class="input1" disabled type="text" id="hk5_input" />
+					</div>
+					<div class="div3">
+						<button class="button1 button" id="hk5_button" onclick="hk_modify(5)">Modify</button>
+					</div>
+				</div>
+				<br />
+				<hr />
+				<h3>Global shortcuts</h3>
+				<p class="text3">
+					You can't directly modify the global shortcuts.Read the docs for more informations. After you done, restart the app to make the
+					new shortcuts work.
+				</p>
+				<button class="button1" id="but9" onclick="link2()">Docs</button>
+				<button class="button1" id="but9" onclick="restart()">Restart</button>
+			</div>
 		</div>
 	</body>
 </html>
