--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -41,6 +41,11 @@
 				<button class="button1" id="but2" onclick="tray()">-</button>
 				<br />
 				<hr />
+				<h3>Reset search after copy</h3>
+				<p class="text3">Reset the search bar after you copied your code.</p>
+				<button class="button1" id="but10" onclick="copy()">-</button>
+				<br />
+				<hr />
 				<h3>Show 2FA names</h3>
 				<p class="text3">The saved 2FA names will show up.</p>
 				<button class="button1" id="but5" onclick="names()">-</button>
