--- a/app/export/index.html
+++ b/app/export/index.html
@@ -35,8 +35,17 @@
 				<br />
 				<h3>Save export</h3>
 				<p class="text3">Save your exported data as a text file to use it elsewhere.</p>
-				<button class="button1" id="but1" onclick="save_file()">Save file</button>
-				<button class="button1" id="but2" onclick="save_qr_codes()">Save QR codes</button>
+				<button class="button1" id="but1" onclick="save_file()">Save as .txt</button>
+				<button class="button1" id="but2" onclick="save_qr_codes()">Save as .html</button>
+				<div class="parent">
+					<div class="div1">
+						<p>Ideal to import for Authme or for Authme Web.</p>
+					</div>
+					<div class="div2">
+						<p>Ideal for scanning QR codes or for security backup.</p>
+					</div>
+				</div>
+
 				<br />
 				<textarea readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
