Window bug fix #64 and Dev mode

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -42,14 +42,19 @@
 				<button class="button1" id="but2" onclick="tray()">-</button>
 				<br />
 				<hr />
-				<h3>Reset search after copy</h3>
-				<p class="text3">Reset the search bar after you copied your code. Needs restart.</p>
-				<button class="button1" id="but10" onclick="copy()">-</button>
-				<br />
-				<hr />
 				<h3>Show 2FA names</h3>
 				<p class="text3">The saved 2FA names will show up. Needs restart.</p>
 				<button class="button1" id="but5" onclick="names()">-</button>
+				<br />
+				<hr />
+				<h3>Reveal code</h3>
+				<p class="text3">Hide the code, but you can still copy it. Needs restart.</p>
+				<button class="button1" id="but11" onclick="reveal()">-</button>
+				<br />
+				<hr />
+				<h3>Reset search after copy</h3>
+				<p class="text3">Reset the search bar after you copied your code. Needs restart.</p>
+				<button class="button1" id="but10" onclick="copy()">-</button>
 				<br />
 				<hr />
 				<h3>Open folders</h3>
