--- a/app/import/index.html
+++ b/app/import/index.html
@@ -39,10 +39,10 @@
 			<div class="choose">
 				<h2 id="choose">Choose option</h2>
 				<p class="text3">Google Authenticator</p>
-				<button class="button1" id="but0" onclick="import_qrcode()">Import from QR code(s)</button>
+				<button class="button1" id="but0" onclick="import_qrcode()">Import from Google Authenticator QR code(s)</button>
 				<br />
 				<p class="text3">Stand alone</p>
-				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from QR code(s)</button>
+				<button class="button1" id="but0" onclick="import_sa_qrcode()">Import from stand alone QR code(s)</button>
 			</div>
 		</div>
 	</body>
