--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -15,11 +15,11 @@
 		<div class="center">
 			<h1>Authme</h1>
 
-			<img src="../../img/iconw.png" alt="" srcset="" />
+			<img src="../../img/iconw.png" />
 			<br />
 			<br />
 			<br />
-			<img src="../../img/loading.gif" alt="" srcset="" />
+			<img src="../../img/loading.gif" />
 
 			<h4 id="ver"></h4>
 		</div>
