--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -6,7 +6,7 @@
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.3.0.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
@@ -15,11 +15,11 @@
 		<div class="center">
 			<h1>Authme</h1>
 
-			<img src="../../img/iconw.png" alt="" srcset="" />
+			<img src="../../img/iconw.png" />
 			<br />
 			<br />
 			<br />
-			<img src="../../img/loading.gif" alt="" srcset="" />
+			<img src="../../img/loading.gif" />
 
 			<h4 id="ver"></h4>
 		</div>
