--- a/app/application/index.html
+++ b/app/application/index.html
@@ -36,6 +36,7 @@
 				onkeyup="search()"
 				onkeydown="search()"
 				placeholder="Search for names..."
+				autofocus
 			/>
 			<!-- grid -->
 		</div>
