--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -57,6 +57,11 @@
 				<button class="button1" id="but10" onclick="copy()">-</button>
 				<br />
 				<hr />
+				<h3>Save search history</h3>
+				<p class="text3">Keep your search history. Needs restart.</p>
+				<button class="button1" id="but13" onclick="search()">-</button>
+				<br />
+				<hr />
 				<h3>Clear data</h3>
 				<p class="text3">Clear password, 2FA codes and all other settings. Be careful.</p>
 				<button class="button1" id="but1" onclick="reset()">Clear data</button>
