Notify on no internet #80

--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" />
 		<title>Authme</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
