--- a/app/application/index.html
+++ b/app/application/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Authme</title>
-		<meta charset="UTF-8" />
-		<title>Authme</title>
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
 		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
@@ -18,6 +17,10 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<div class="popup">
+			Authme runs in offline mode. The app will work fine, but the app can't look for new updates!
+			<a class="popup_link" onclick="this.parentElement.style.display='none';">Close</a>
+		</div>
 		<div class="center">
 			<h1 class="h1">Authme</h1>
 			<h2 class="h2" id="title">Here are your 2FA codes:</h2>
