--- a/app/export/index.html
+++ b/app/export/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
 		<title>Authme</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
 		<!-- js -->
 		<script defer src="./src/js/convert.js"></script>
 		<script defer src="./src/js/index.js"></script>
