--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
 		<title>Authme</title>
+		<meta charset="UTF-8" />
 		<!-- js -->
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/keys.js"></script>
@@ -13,6 +13,14 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<div class="popup offline">
+			Authme runs in offline mode. The app will work fine, but the app can't look for new updates!
+			<a class="popup_link" onclick="this.parentElement.style.display='none';">Close</a>
+		</div>
+		<div class="popup online">
+			Authme runs in online mode. The app reconnected to the internet, you can look for new updates!
+			<a class="popup_link" onclick="this.parentElement.style.display='none';">Close</a>
+		</div>
 		<div class="center">
 			<!-- navigation -->
 			<div class="tab">
