--- a/app/export/index.html
+++ b/app/export/index.html
@@ -21,7 +21,7 @@
 			<button class="button1 but0" onclick="hide()">Close</button>
 			<div class="before_export">
 				<h3>Start export</h3>
-				<p class="text3 p1">If you saved your config you can export the secrects and the QR codes.</p>
+				<p class="text3 p1">If you saved your config you can export the secrects and the QR code(s).</p>
 				<button class="button1 but1" id="but0" onclick="exp()">Export</button>
 				<br />
 			</div>
