--- a/app/import/index.html
+++ b/app/import/index.html
@@ -25,7 +25,7 @@
 			<details class="details1" open>
 				<summary class="summary1">Getting started</summary>
 				<p class="text3">
-					If you don't know what to do please read the documentation and come back here. (Recommended for most users):
+					If you don't know what to do please read the documentation and come back here. Recommended for most users:
 					<br />
 					<a href="#" onclick="link0()">Authme Import Documentation</a>
 				</p>
