--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -16,10 +16,14 @@
 			<h1>Authme</h1>
 
 			<img src="../../img/iconw.png" />
-			<br />
-			<br />
-			<br />
-			<img src="../../img/loading.gif" />
+
+			<div class="animation">
+				<div class="loader"></div>
+				<div class="loader"></div>
+				<div class="loader"></div>
+				<div class="loader"></div>
+				<div class="loader"></div>
+			</div>
 
 			<h4 id="ver"></h4>
 		</div>
