Fix Python errors if missing

--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -12,20 +12,24 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body unselectable="on" onselectstart="return false;" onmousedown="return false;">
-		<div class="center">
-			<h1>Authme</h1>
+		<div class="mask">
+			<div class="center">
+				<h1>Authme</h1>
 
-			<img src="../../img/iconw.png" />
+				<img src="../../img/iconw.png" />
 
-			<div class="animation">
-				<div class="loader"></div>
-				<div class="loader"></div>
-				<div class="loader"></div>
-				<div class="loader"></div>
-				<div class="loader"></div>
+				<h4 id="loading">Loading...</h4>
+
+				<div class="animation">
+					<div class="loader"></div>
+					<div class="loader"></div>
+					<div class="loader"></div>
+					<div class="loader"></div>
+					<div class="loader"></div>
+				</div>
+
+				<h4 id="ver"></h4>
 			</div>
-
-			<h4 id="ver"></h4>
 		</div>
 	</body>
 </html>
