Splash screen title

--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -18,7 +18,7 @@
 
 				<img src="../../img/iconw.png" />
 
-				<h4 id="loading">Loading... (0s)</h4>
+				<h4 id="loading">Starting... (0s)</h4>
 
 				<div class="animation">
 					<div class="loader"></div>
