--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -27,8 +27,7 @@
 			<div class="afterLoad">
 				<h3>Edit mode</h3>
 				<p class="text3">Now you can modify existing codes or add more.</p>
-				<button class="button1" onclick="loadCodes()">Save</button>
-				<button class="button1" onclick="restart()">Restart</button>
+				<button class="button1" onclick="createSave()">Save</button>
 
 				<div class="container"></div>
 			</div>
