Fix password length valdidation #105

--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -15,7 +15,7 @@
 		<div class="center">
 			<h1>Authme</h1>
 			<h2>Welcome!</h2>
-			<h3 id="text">Please create a password for encryt your 2FA codes!</h3>
+			<h3 id="text">Please create a password to encryt your 2FA codes!</h3>
 			<label for="password_input1" id="password_label1">Password</label>
 			<br />
 			<input class="input1" type="password" name="password1" id="password_input1" />
