--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -35,6 +35,7 @@
 				<h3>Edit mode</h3>
 				<p class="text3">Now you can modify existing codes or add more.</p>
 				<button class="button1" onclick="createSave()">Save</button>
+				<button class="button1" onclick="addMore()">Add</button>
 				<!-- codes -->
 				<div class="container"></div>
 			</div>
