Update icons and selection color

--- a/app/splash/index.html
+++ b/app/splash/index.html
@@ -16,7 +16,7 @@
 			<div class="center">
 				<h1>Authme</h1>
 
-				<img src="../../img/iconw.png" />
+				<img src="../../img/splash.png" />
 
 				<div class="animation">
 					<div class="loader"></div>
