Editing shortcuts not requires restart #113

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -180,23 +180,22 @@
 				<hr />
 				<h3>Status</h3>
 				<p class="text3">Current status of the API. Click for all the status informations.</p>
-				<button class="button1" id="but6" onclick="link0()">-</button>
+				<button class="button1" id="but6" onclick="statusLink()">-</button>
 				<br />
 				<hr />
 				<h3>Version</h3>
 				<p class="text3">Your current Authme version. Click for release notes.</p>
-				<button class="button1" id="but7" onclick="link1()">-</button>
+				<button class="button1" id="but7" onclick="releasesLink()">-</button>
 			</div>
 
 			<!-- shortcuts -->
 			<div id="shortcuts" class="tabcontent">
 				<h3>Shortcuts</h3>
 				<p class="text3">
-					You can modify the shortcuts here, if you don't understand something just read the docs. After you done, restart the app to make
-					the new shortcuts work. Shortcuts not work on this page, go back to the settings tab to reactivate them!
+					You can modify the shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page, go back
+					to the settings tab to reactivate them!
 				</p>
-				<button class="button1" id="but9" onclick="link2()">Docs</button>
-				<button class="button1" id="but9" onclick="restart()">Restart</button>
+				<button class="button1" id="but9" onclick="shortcutsLink()">Docs</button>
 				<br />
 				<br />
 				<br />
@@ -564,11 +563,10 @@
 				<hr />
 				<h3>Global shortcuts</h3>
 				<p class="text3">
-					You can modify the global shortcuts here, if you don't understand something just read the docs. After you done, restart the app to
-					make the new shortcuts work. Shortcuts not work on this page, go back to the settings tab to reactivate them!
+					You can modify the global shortcuts here, if you don't understand something just read the docs. Shortcuts not work on this page,
+					go back to the settings tab to reactivate them!
 				</p>
-				<button class="button1" id="but9" onclick="link2()">Docs</button>
-				<button class="button1" id="but9" onclick="restart()">Restart</button>
+				<button class="button1" id="but9" onclick="shortcutsLink()">Docs</button>
 				<br />
 				<br />
 				<br />
