--- a/app/export/index.html
+++ b/app/export/index.html
@@ -44,7 +44,7 @@
 				</div>
 
 				<br />
-				<textarea readonly="readonly" id="result" cols="30" rows="10"></textarea>
+				<textarea class="blur" readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
 		</div>
 	</body>
