--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -152,7 +152,7 @@
 				<br />
 				<hr />
 				<h3>Reveal code</h3>
-				<p class="text3">Hide the code, but you can still copy it. Needs restart.</p>
+				<p class="text3">Blurs the code, but you can still copy it. Needs restart.</p>
 				<button class="button1" id="but11" onclick="reveal()">-</button>
 				<br />
 				<hr />
