--- a/app/application/index.html
+++ b/app/application/index.html
@@ -103,8 +103,8 @@
 
 					<p class="mx-3 flex flex-row relative top-1">
 						New Authme version available. Please update your app!
-						<a class="mx-3 link" onclick="downloadUpdate()">Download Update</a>
-						<a class="link" onclick="releaseNotes()">Release Notes</a>
+						<a class="mx-3 link" onclick="downloadUpdate()">Download update</a>
+						<a class="link" onclick="releaseNotes()">Release notes</a>
 					</p>
 				</div>
 				<a
