--- a/app/import/index.html
+++ b/app/import/index.html
@@ -35,7 +35,7 @@
 				<h2 id="choose">Import</h2>
 				<p class="text3">QR code(s)</p>
 				<details class="details1" id="dt">
-					<summary class="summary1">Import instructions</summary>
+					<summary class="summary1">Instructions</summary>
 					<p class="text3">
 						This option don't requires anything special.
 						<br />
@@ -47,7 +47,7 @@
 				<h2 id="choose">Advanced import</h2>
 				<p class="text3">Google Authenticator QR code(s)</p>
 				<details class="details1" id="dt">
-					<summary class="summary1">Advanced import instructions</summary>
+					<summary class="summary1">Instructions</summary>
 					<p class="text3">
 						This option requires Python. Please check: Top Menu > Info > About.
 						<br />
