--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -29,12 +29,12 @@
 				<h3>Load saved code</h3>
 				<p class="text3">You can load the codes you saved.</p>
 				<button class="button1" onclick="loadCodes()">Load codes</button>
-				<p class="warning">This feature is WIP! Use it at your own risk!</p>
 			</div>
 			<div class="afterLoad">
 				<h3>Edit mode</h3>
 				<p class="text3">Now you can modify existing codes or add more.</p>
 				<button class="button1" onclick="createSave()">Save</button>
+				<button class="button1" onclick="addMore()">Add</button>
 				<!-- codes -->
 				<div class="container"></div>
 			</div>
