--- a/app/export/index.html
+++ b/app/export/index.html
@@ -26,10 +26,6 @@
 				<br />
 			</div>
 			<div class="after_export">
-				<h3>Authme Web</h3>
-				<p class="text3 p1">You can use your exported config in Authme Web.</p>
-				<button class="button1 but1" id="but0" onclick="aw()">Open</button>
-				<br />
 				<h3>Save export</h3>
 				<p class="text3">Save your exported data as a text file to use it elsewhere.</p>
 				<button class="button1" id="but1" onclick="save_file()">Save as .txt</button>
@@ -44,7 +40,7 @@
 				</div>
 
 				<br />
-				<textarea readonly="readonly" id="result" cols="30" rows="10"></textarea>
+				<textarea class="blur" readonly="readonly" id="result" cols="30" rows="10"></textarea>
 			</div>
 		</div>
 	</body>
